Fix submit z-index

--- a/section/dashboard.scss
+++ b/section/dashboard.scss
@@ -68,6 +68,7 @@
 				.submit_img {
 					position: absolute;
 					right: 0;
+					z-index: 1000;
 				}
 
 				.input_holder .textarea_holder textarea {
